--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,7 @@ body {
     padding: 0;
     border-radius: 10px;
     overflow: hidden;
+    transition: 0.3s ease-in-out;
     & img {
       height: 60%;
       object-fit: cover;
